style.css
/* ... */
#\$sidebarTop {
	overflow: auto;
}
#\$sidebarBottom {
	overflow: auto;
}
#\$sidebarPinned {
	-webkit-flex-shrink: 1;
	flex-shrink: 1;
	overflow-y: auto;
}

/**************
 ** Scroller **
 **************/

scroll-outer {
	display: block;
	height: 100%;
	overflow-y: scroll;
}

scroll-inner {
	display: block;
}

/* narrow screen: fullscreen sidebar */
@media (max-width: 700px) {
	sidebar-container {
		width: 100% !important;
	}
	.closeSidebar {
		display: block;
		height: 2.3rem;
	}
	html.f-mobileSidebar body > * {
	}
	html.f-mobileSidebar sidebar-container {
		border-left: none;
		position: fixed;
		left: 0;
		top: 0;
		bottom: 0;
		right: 0;
	}
	html:not(.f-mobileSidebar) sidebar-container {
		display: none;
	}
	main {
		max-width: 100% !important;
	}
	#\$sidebarActivity {
		max-height: 100vh;
	}
}


/* for devices with small screens */
@media (max-width: 700px), (max-height: 500px) {
	textarea {
		font-size: 100%;
	}
	/* make the entire page scroll */
	/* todo: make chat mode work better here */
	/*body:not(.pageMode) {
		position: static;
		min-height: 100vh;
		font-size: 0.9em;
	}
	body:not(.pageMode) main-scrollable {
		height: auto !important;
		-webkit-flex-basis: auto;
		flex-basis: auto;
	}
	html {
		background-color: transparent;
	}
	.editorPreview {
		-webkit-flex-basis: auto;
		flex-basis: auto;
	}
	.userPageBox {
		max-height: none;
	}
	.inputPane textArea {
		font-size: 1rem;
	}*/
}

.registerBox {
	padding: 0.3rem 0.5rem;
}

select {
	width: 7em;
}

.registerBox input {
	/*margin: 1px;*/
}

input {
	min-width: 0;
	max-width: 100%;
}

.permissionRow > th {
	padding: 0;
	text-align: left;
}

.permissionRow > td {
	text-align: center;
	padding: 0;
}

.half {
	text-align: center;
	display: block;
	line-height: 1.15rem;
	min-height: 1.15rem;
}

.half-label {
	font-weight: bold;
	/*text-align: right;*/
}

body.pageMode main-scrollable {
	height: 100%;
}

.chatScroller {
	height: 300px;
}

.chatPane {
	overflow-y: auto;
	/*flex-basis: 100%;*/
}

#\$sidebarPinned {
	width: 100%;
}
.wideCell {
	width: 100%;
}

.wideCell > a {
	display: block;
}

.chatScroller {
	height: 100vh;
}

.chatScroller > scroll-inner {
	padding-bottom: 0.5rem;
}

html.f-splitView main-scrollable {
	flex-grow: 0;
	flex-basis: auto;
	overflow-y: hidden;
}

.split-top {
	overflow-y: auto;
}

sidebar-panel {
	display: block;
	width: 100%;
	height: 100%;
}

.image-box {
	overflow: hidden;
	position: relative;
}

.image-box > img {
	position: absolute;
	left: -10000%;
	right: -10000%;
	top: -10000%;
	bottom: -10000%;
	margin: auto auto;
	max-width: 100%;
	max-height: 100%;
	box-sizing: border-box;
	border: 1px solid black;

	/*padding: 1px;
	background: black;
	border: 5px solid white;*/
	/*-webkit-transform: scale(1); //this should be the inverse of the max-width/height value (5% -> 20, etc.)
	transform: scale(1);*/
}

.image-box-large > img {
	max-width: 1%;
	max-height: 1%;
	-webkit-transform: scale(100);
	transform: scale(100);
	border: none;
}

user-select {
	display: block;
}

textarea-container {
	position: relative;
	display: block;
	box-sizing: content-box;
	border: 2px solid #00C8B4;
	padding: 5px;
	overflow: hidden;
	background-color: white;
}

.inputPane {
	align-items: end;
}

textarea-container > textarea {
	resize: none;
	height: 2.5em;
	min-height: 2.5em;
		/*position: absolute;*/
	box-sizing: content-box;
	resize: none;
	width: 100%;
	border: none;
	padding: 0;
	margin: 0;
	border-radius: 0;
	box-shadow: none;
}

textarea-container > textarea:focus {
	outline-offset: 4px;
	outline: 2px solid black;
}

textarea-container, textarea-container > textarea {
	max-height: 25vh;
}

.no-select {
	user-select: none;
}

.permission-table td {
	text-align: center;
}

.permission-users td {
	text-align: center;
}

.permission-users th {
	text-align: right;
}

.permission-users tr {
	border-top: 1px solid gray;
}

#\$pageContents, .split-top {
	max-height: 100%;
}

.split-top {
	height: 40vh;
}

.gallery-inner {
	margin: 0 auto;
	position: relative;
}

.gallery-inner canvas {
	width: 100%;
	vertical-align: top; /* but, why? */
}

.gallery-inner > div {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #CCC;
}

.gallery-title {
	text-align: center;
	margin: 0 auto;
	background-color: #EEE;
}

.sidebarComment {
	white-space: pre;
	text-overflow: ellipsis;
}

.debugMessage {
	background-color: #EEE;
	padding: 2px 3px;
}

